# mebelmart-ui-tests

./: .gitignore  README.md  conftest.py  pyproject.toml  requirements.txt
pages/: cart_page.py  favorite_page.py  search_page.py  sofa_details_page.py  sofas_page.py
tests/: test_cart.py  test_divany_filter.py  test_favorites.py  test_search.py  test_sofa_details.py
